--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
-  "name": "juxtapros2",
+  "name": "new-juxtapros",
+  "version": "0.0.0",
   "private": true,
-  "version": "0.0.1-alpha",
-  "description": "JuxtaPros is a simple tool for comparing alternatives.",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JacobCWard/juxtapros2.git"
-  },
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/JacobCWard/juxtapros2/issues"
-  },
-  "homepage": "https://github.com/JacobCWard/juxtapros2#readme",
   "dependencies": {
-    "express": "^4.13.3",
-    "jade": "^1.11.0",
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "jade": "~1.11.0",
+    "morgan": "~1.6.1",
+    "node-sass-middleware": "0.8.0",
+    "serve-favicon": "~2.3.0",
     "passport": "^0.3.2"
   }
 }
