--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "mongodb": "^2.0.48",
     "morgan": "~1.6.1",
     "node-sass-middleware": "0.8.0",
     "passport": "^0.3.2",
