--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "~1.6.1",
     "node-sass-middleware": "0.8.0",
     "passport": "^0.3.2",
+    "passport-google": "^0.3.0",
     "passport-google-oauth": "^0.2.0",
     "serve-favicon": "~2.3.0"
   }
