--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.12.1",
     "jade": "~1.11.0",
     "mongodb": "^2.0.48",
     "morgan": "~1.6.1",
@@ -17,6 +18,7 @@
     "passport": "^0.3.2",
     "passport-google": "^0.3.0",
     "passport-google-oauth": "^0.2.0",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
   }
 }
